# Hall_WebAssembly

./: CMakeLists.txt  Main.qml  cert.pem  hall_ui.qrc  key.pem  main.cpp  server.py
